--- a/src/extensions/hello.html
+++ b/src/extensions/hello.html
@@ -1,7 +1,5 @@
 <html>
   <body>
-    <h1>Hello Extensions</h1>
-    <ul id="param-list"></ul>
-    <script src="popup.js"></script>
+    <h1 style="color: #0009E9;">Destiny Applied</h1>
   </body>
 </html>
